dev/test_programs/INVALID/group12/weed_errors/assign_error.go
// assignment count mismatch

package main;

func main() {
	var x, y int
	x, y = 10
	if x>2 && y>2 {
		print()
	}

}